// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders disabled control with tooltip 1`] = `
<div
  className="kuiVerticalRhythm"
  data-test-subj="inputControl0"
>
  <label
    className="kuiLabel kuiVerticalRhythmSmall"
    htmlFor="controlId"
  >
    test control
  </label>
  <div
    className="kuiVerticalRhythmSmall"
  >
    <OverlayTrigger
      display={false}
      isSticky={false}
      overlay={
        <Tooltip
          className="inputControlDisabledTooltip"
          isSticky={false}
          size="auto"
          visible={true}
        />
      }
      pin={true}
      placement="top"
      theme="dark"
      trigger="hover"
    >
      <div>
        My Control
      </div>
    </OverlayTrigger>
  </div>
</div>
`;

exports[`renders enabled control 1`] = `
<div
  className="kuiVerticalRhythm"
  data-test-subj="inputControl0"
>
  <label
    className="kuiLabel kuiVerticalRhythmSmall"
    htmlFor="controlId"
  >
    test control
  </label>
  <div
    className="kuiVerticalRhythmSmall"
  >
    <div>
      My Control
    </div>
  </div>
</div>
`;
